
[*] Thu Aug 21 2003 - netcat v0.7.0

  o Added command line switch `-c' (close), which shuts down the connection
    on EOF from stdin without waiting for any answer from remote host.
  o Some previously optionally included code related to signal handling is now
    included in the default compilation.
  o Now the SIGUSR1 signal is handled and prints the current sending/receiving
    statistics to stderr, disregarding the verbosity level given.
  o Added some development sheets for those that may want to study GNU Netcat's
    development, in the doc/drafts directory.
  o Fixed a bug in UDP listening mode without pktinfo support and specifying
    the listening interface with `-s'.
  o Now when connecting to an host by an alias of its, it won't write a warning
    anymore but instead it will show the real name of the host.
  o Various fixes for code portability.  Changed the debugging support routines,
    and checking better what kind of compiler there is. [BUG #677625]
  o Fixed a simple compile error on Solaris7. [BUG #788870]
  o Fixed core dump in command line parsing routines when fgets() returned an
    empty string. [BUG #791799]
  o Now netcat is able to handle large amount of data, without overflowing the
    socket queues anymore.


[*] Tue Oct 15 2002 - netcat v0.6.1

  o Fixed a compilation error in the "doc/" subdirectory when using virtual
    paths.
  o Fixed the socket creation function not setting the right sockopts.  This
    caused netcat to fail opening sockets in some situations.
  o Unified the SIOCGIF* and SIOCGLIF* extension in order to allow udphelper
    compile on Solaris.
  o Fixed a compilation error in udphelper.c on Solaris.
  o Added type "in_port_t" to indicate port numbers in network byte order.
    Also the "nc_port_t" object now contains the port number both in host byte
    order and network byte order notation, which needs less conversions.
  o Added slovak translation, thanks to Lubomir Sedlacik.

